# convert-shp-to-csv

./: .gitignore  README.md  pyproject.toml
convert_shp_to_csv/: main.py
