[tool.poetry]
name = "convert-shp-to-csv"
version = "0.1.1"
description = "Converts shape files (.shp) to a gridded csv file"
authors = ["Brandon Rose <brandon@jataware.com>", "Matthew Printz <matt@jataware.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.10.2"
Shapely = "^1.8.1"
numpy = "^1.22.3"
pygeos = "^0.12.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
convert-shp-to-csv = "convert_shp_to_csv.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
